# Shape-CFD

./: .gitignore  AGENT_B2_PAPER_DRAFT.tex  AGENT_B2_REPORT.md  BLIND_REVIEW_20260502.md  CITATION.cff  EXPERIMENT_AUDIT_TRAIL_20260502.md  LICENSE  LINUX_CROSS_POLLINATION_CANDIDATES_20260502.md  MENTOR_GUIDANCE_20260502.md  NOTICE  README.md  ROOT_CAUSE_INVESTIGATION_20260502.md  agent_b_run_sigma_5corpus_v1.sh
benchmark/: AGENT_B_V2_STATUS.md  adaptive_fusion_lambda.py  adaptive_fusion_lambda_v2.py  adaptive_lambda_online.py  adaptive_lambda_online_selfcontained.py  beir_bge_stacking_bench.js  beir_laplacian_test.js  beir_multi_bench.js  beir_significance.js  beir_token2stage_bench.js  beir_token_bench.js  bge_encode_nfcorpus.py  build_clouds.js  build_first_stage_for_rerank.py  build_first_stage_from_cache.py  colbertv2_lap_arguana_results.json  colbertv2_lap_eval_7b13_cpu.py  colbertv2_lap_fiqa_results.json  colbertv2_lap_nfcorpus_results.json  colbertv2_lap_scidocs_results.json  colbertv2_lap_scifact_results.json  complementarity_analysis.py  cross_model_per_model_tuned_5corpora.py  cross_model_unified.py  e5_cuda_control.py  (+28 more)
rust-engine/: Cargo.toml
rust-engine/src/: adc_chamfer.rs  cloud_store.rs  fullscan.rs  helmholtz_kalman.rs  hnsw_engine.rs  index_manager.rs  inverted_index.rs  lib.rs  multi_probe.rs  pde.rs  pq_chamfer.rs  pq_store.rs  residual.rs  search.rs  token_chamfer.rs  token_cloud_store.rs  utils.rs  vt_distance.rs
rust-engine/standalone_tools/train_pq_codebook/: Cargo.toml
rust-engine/standalone_tools/train_pq_codebook/src/: main.rs
(+358 files in other folders)
